# churn-app

.claude/: settings.local.json
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
backend/.claude/: settings.local.json
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: health.py
backend/app/core/: config.py
backend/app/schemas/: health.py
backend/tests/: test_health.py
frontend/.claude/: settings.local.json
ml_research/: .env.example  .gitignore  pyproject.toml
ml_research/notebooks/: 01_eda_banorte_xb.ipynb  01_null_analysis.ipynb  02_preprocessing_nulls.ipynb  03_merchant_aggregation.ipynb  04_churn_model.ipynb
ml_research/scripts/: download_banorte_xb.py
ml_research/src/churn_research/config/: settings.py
ml_research/src/churn_research/extraction/: client.py  downloader.py  parquet_writer.py  query_builder.py
