[project]
name = "churn-api"
version = "0.1.0"
description = "SaaS Churn Predictions API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"app/api/**" = ["B008"]  # Allow Depends() in function signatures (FastAPI pattern)

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
